--- a/examples/treemap.html
+++ b/examples/treemap.html
@@ -37,6 +37,9 @@
       var data20 = JSON.parse(JSON.stringify(tracker_data));
       data20.children = tracker_data.children.slice(10,30)
 
+      var data30 = JSON.parse(JSON.stringify(tracker_data));
+      data20.children = tracker_data.children.slice(30,70)
+
 
       var first = d3_rs_treemap.html('one')
         // .appendText(true)
@@ -47,6 +50,7 @@
       dElm.datum(data5).transition().delay(1500).duration(1000).call(first.filter('emboss'))
       dElm.datum(data5Changed).transition().delay(3000).duration(1000).call(first.filter('greyscale'))
       dElm.datum(data20).transition().delay(4500).duration(1000).call(first.filter(null))
+      dElm.datum(data30).transition().delay(6000).duration(1000).call(first.filter('greyscale'))
 
       d3.select('#elm').datum([]).call(d3_rs_treemap.html('two').appendText(true))
     </script>
