--- a/examples/treemap.html
+++ b/examples/treemap.html
@@ -44,7 +44,7 @@
       var first = d3_rs_treemap.html('one')
         // .appendText(true)
         .appendImage(true)
-        .imageFallbackLink("test_assets/fa-eye@3x.png")
+        .imageFallbackLink("test_assets/fa-eye.png")
 
       var dElm = d3.select('#elm').datum(data1).call(first);
       dElm.datum(data5).transition().delay(1500).duration(1000).call(first.filter('emboss'))
